<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.harmonic.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.harmonic.ui.gallery.GalleryFragment"
        android:label="@string/ttt"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.harmonic.ui.slideshow.SlideshowFragment"
        android:label="@string/mpl"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_abt"
        android:name="com.example.harmonic.abtus"
        android:label="@string/abt"
        tools:layout="@layout/abtus_fragment" />

</navigation>